--- a/src/components/detalleServicio/DetalleCTA.css
+++ b/src/components/detalleServicio/DetalleCTA.css
@@ -11,13 +11,13 @@
 .detalle-cta-titulo {
   font-size: clamp(1.3rem, 3vw, 1.7rem);
   font-weight: 700;
-  margin-bottom: 0.4rem;
+  margin-block-end: 0.4rem;
 }
 
 .detalle-cta-subtitulo {
   color: #6b615b;
   font-size: 1rem;
-  margin-bottom: 1.8rem;
+  margin-block-end: 1.8rem;
   line-height: 1.4;
 }
 
