--- a/src/components/common/ContactoResumen.css
+++ b/src/components/common/ContactoResumen.css
@@ -4,7 +4,7 @@
   padding: 2.5rem 1.5rem 3rem;
   text-align: center;
   color: #2e2a27;
-  margin-bottom: 90px; /* deja espacio antes de la navbar */
+  margin-bottom: 8rem; /* deja espacio antes de la navbar */
 }
 
 .contacto-titulo {
